# syntacore-task

./: .clang-tidy  CMakeLists.txt  README.md
include/: query_tree.h
src/: main.cc  query_tree.cc
test/: CMakeLists.txt  arithmetic_test.cc  nth_smallest_tests.cc  number_of_smaller_tests.cc
